Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
         <h1>ORIENTDB-ANDROID</h1>
 
+<p><img src="https://github.com/wuman/orientdb-android/raw/master/doc/images/orientdb-android-logo.png" alt="Feature Image"></p>
+
 <p>OrientDB-Android is a port/fork of <a href="http://www.orientdb.org/">OrientDB</a> for the
 Android platform.</p>
 
