Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Document and Graph DBMS. It's written in Java and it's amazing fast: it can stor
 up to 150,000 records per second on common hardware.</p>
 
 <p>OrientDB is in its core a <a href="http://en.wikipedia.org/wiki/Graph_database">graph database</a>,
-although it also offers the interface of a document database. When used a 
+although it also offers the interface of a document database. When used as a 
 document database, the relationships are managed as in graph databases with 
 direct connections among records. You can traverse entire or part of trees and 
 graphs of records in few milliseconds.</p>
