Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ The port is designed to be used in conjunction with the
 <code>orient-android-commons</code> and <code>orientdb-android-core</code> have been used and tested 
 in the wild, so use it at your own risk. We welcome contributions and feedbacks.</p>
 
-<p>The current release of orientdb-android is 1.1.0.0, which is in line with version
+<p>The current release of orientdb-android is 1.1.0.x, which is in line with version
 1.1.0 of the upstream OrientDB. </p>
 
 <h2>Including in Your Project</h2>
@@ -81,7 +81,7 @@ the desired component of the library.</p>
 <pre><code>&lt;dependency&gt;
     &lt;groupId&gt;com.wu-man&lt;/groupId&gt;
     &lt;artifactId&gt;orient[db]-android-*&lt;/artifactId&gt;
-    &lt;version&gt;1.1.0.0&lt;/version&gt;
+    &lt;version&gt;1.1.0.1&lt;/version&gt;
 &lt;/dependency&gt;
 </code></pre>
 </li>
